--- a/04-javascript-kategorisi/index.html
+++ b/04-javascript-kategorisi/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Kodluyoruz JavaScript Eğitimi</h1>
  
-    <script src="js/001-hello-world.js"></script>
+    <!-- <script src="js/001-hello-world.js"></script> -->
+    <script src="js/002-degisken-tanimlama.js"></script>
 </body>
 </html>
