--- a/04-javascript-kategorisi/index.html
+++ b/04-javascript-kategorisi/index.html
@@ -10,6 +10,7 @@
     <h1>Kodluyoruz JavaScript Eğitimi</h1>
  
     <!-- <script src="js/001-hello-world.js"></script> -->
-    <script src="js/002-degisken-tanimlama.js"></script>
+    <!-- <script src="js/002-degisken-tanimlama.js"></script> -->
+    <script src="js/003-degisken-tanimlama-kurallari.js"></script>
 </body>
 </html>
