header was added

--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/medium.css">
     <title>Medium</title>
 </head>
 <body>
@@ -43,6 +46,14 @@
             </ul>
           </div>
         </nav>
+      </div>
+    </div>
+    <div class="bg-blue border-bottom-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">Lorem, ipsum dolor.</div>
+          <div class="col-6">Photo</div>
+        </div>
       </div>
     </div>
 
