--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
@@ -1,67 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/medium.css">
-    <title>Medium</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="fontawesome/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/medium.css">
+  <title>Medium</title>
 </head>
+
 <body>
 
-    <!-- Navbar Start -->
-    <div style="background-color: #C4E2FF; border-bottom: 1px solid rgba(41, 41, 41, 1);">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">
-            Medium
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">Our Story</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Membership</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Write</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link btn btn-dark text-light" href="#">Get Started</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+  <!-- Navbar Start -->
+  <div style="background-color: #C4E2FF; border-bottom: 1px solid rgba(41, 41, 41, 1);">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+          <strong>Medium</strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active pe-2">
+              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item pe-2 ">
+              <a class="nav-link" href="#">Our Story</a>
+            </li>
+            <li class="nav-item pe-2">
+              <a class="nav-link" href="#">Membership</a>
+            </li>
+            <li class="nav-item pe-2">
+              <a class="nav-link" href="#">Write</a>
+            </li>
+            <li class="nav-item pe-2">
+              <a class="nav-link" href="#">Sign In</a>
+            </li>
+            <li class="nav-item pe-2">
+              <a class="nav-link btn btn-dark text-light" href="#">Get Started</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    <div class="bg-blue border-bottom-dark">
-      <div class="container">
-        <div class="row">
-          <div class="col-6">Lorem, ipsum dolor.</div>
-          <div class="col-6">Photo</div>
+  </div>
+  <div class="bg-blue border-bottom-dark">
+    <div class="container py-5">
+      <div class="row ">
+        <div class="col-6">
+          <h1 class="display-2">
+            Medium is a place to write, read, and connect
+          </h1>
+          <p class="lead">
+            It's easy and free to post your thinking on any topic and connect with millions of readers.
+          </p>
+          <a href="#" class="btn btn-light rounded-pill border border-1 border-dark">Start Writing
+          </a>
+        </div>
+        <div class="col-6">
+          <img src="https://picsum.photos/300/300" alt="" class="rounded-circle float-end">
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h6><i class="fas fa-rocket"></i> <small class="ml-2">TRENDING ON MEDIUM</small></h6>
+        <article class="col-sm-4">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span>Winston Marshall</span>
+              <h6 class="mt-2">Why I’m Leaving Mumford & Sons</h6>
+              <ul>
+                <li>Jun 24 · 6 min read</li>
+              </ul>
+            </div>
+          </div>
+        </article>  
+      </div>
+    </div>
+  </div>
 
 
 
 
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    
+
+
+
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
