article is added

--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
@@ -73,25 +73,124 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container mt-5">
     <div class="row">
       <div class="col-12">
         <h6><i class="fas fa-rocket"></i> <small class="ml-2">TRENDING ON MEDIUM</small></h6>
-        <article class="col-sm-4">
+        <article class="col-sm-4 float-start mb-3">
           <div class="row">
             <div class="col-1">
               <h6 class="text-black-50">01</h6>
             </div>
             <div class="col-11">
               <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
-              <span>Winston Marshall</span>
-              <h6 class="mt-2">Why I’m Leaving Mumford & Sons</h6>
-              <ul>
-                <li>Jun 24 · 6 min read</li>
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
               </ul>
             </div>
           </div>
         </article>  
+        <article class="col-sm-4 float-start mb-3">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article> 
+        <article class="col-sm-4 float-start mb-3">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article> 
+        <article class="col-sm-4 float-start mb-3">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article> 
+        <article class="col-sm-4 float-start mb-3">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article> 
+        <article class="col-sm-4 float-start mb-3">
+          <div class="row">
+            <div class="col-1">
+              <h6 class="text-black-50">01</h6>
+            </div>
+            <div class="col-11">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2"><strong>Why I’m Leaving Mumford & Sons</strong></h6>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article> 
       </div>
     </div>
   </div>
