--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Navbar Start -->
-  <div style="background-color: #C4E2FF; border-bottom: 1px solid rgba(41, 41, 41, 1);">
+  <div style="background-color: #C4E2FF; border-bottom: 1px solid rgba(41, 41, 41, 1);" class=" py-1 fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
@@ -53,7 +53,7 @@
       </nav>
     </div>
   </div>
-  <div class="bg-blue border-bottom-dark">
+  <div class="bg-blue border-bottom-dark mt-5">
     <div class="container py-5">
       <div class="row ">
         <div class="col-6">
@@ -192,6 +192,121 @@
           </div>
         </article> 
       </div>
+    </div>
+    <div class="row mt-5">
+      <section class="col-sm-8">
+        <article class="row mb-4">
+          <div class="col-8">
+            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+            <span class="small ms-1">Winston Marshall</span>
+            <h6 class="mt-2">
+              <strong>
+                This Long-Awaited Technology May Finally Change the World
+              </strong>
+            </h6>
+            <p>
+              Solid-state batteries are poised to emerge in the coming years
+            </p>
+            <ul class="list-inline small">
+              <li class="list-inline-item">Jun 24</li>
+              <li class="list-inline-item">6 min read</li>
+              <li class="list-inline-item">
+                <i class="far fa-star"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <img src="https://picsum.photos/id/13/250/150" alt="">
+          </div>
+        </article>
+        <article class="row mb-4">
+          <div class="col-8">
+            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+            <span class="small ms-1">Winston Marshall</span>
+            <h6 class="mt-2">
+              <strong>
+                This Long-Awaited Technology May Finally Change the World
+              </strong>
+            </h6>
+            <p>
+              Solid-state batteries are poised to emerge in the coming years
+            </p>
+            <ul class="list-inline small">
+              <li class="list-inline-item">Jun 24</li>
+              <li class="list-inline-item">6 min read</li>
+              <li class="list-inline-item">
+                <i class="far fa-star"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <img src="https://picsum.photos/id/13/250/150" alt="">
+          </div>
+        </article>
+        <article class="row mb-4">
+          <div class="col-8">
+            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+            <span class="small ms-1">Winston Marshall</span>
+            <h6 class="mt-2">
+              <strong>
+                This Long-Awaited Technology May Finally Change the World
+              </strong>
+            </h6>
+            <p>
+              Solid-state batteries are poised to emerge in the coming years
+            </p>
+            <ul class="list-inline small">
+              <li class="list-inline-item">Jun 24</li>
+              <li class="list-inline-item">6 min read</li>
+              <li class="list-inline-item">
+                <i class="far fa-star"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <img src="https://picsum.photos/id/13/250/150" alt="">
+          </div>
+        </article>
+        
+      </section>
+      <aside class="col-sm-4">
+        <h6>
+          <small>
+            <strong>
+              DISCOVER MORE OF WHAT MATTERS TO YOU
+            </strong>
+          </small>
+        </h6>
+        <ul class="list-inline aside-buttons">
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+          </li>
+        </ul>
+      </aside>
     </div>
   </div>
 
