border for news is added

--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/index.html
@@ -193,120 +193,125 @@
         </article> 
       </div>
     </div>
-    <div class="row mt-5">
-      <section class="col-sm-8">
-        <article class="row mb-4">
-          <div class="col-8">
-            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
-            <span class="small ms-1">Winston Marshall</span>
-            <h6 class="mt-2">
+  </div>
+
+  <div class="border-top-dark">
+    <div class="container">
+      <div class="row mt-5">
+        <section class="col-sm-8">
+          <article class="row mb-4">
+            <div class="col-8">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2">
+                <strong>
+                  This Long-Awaited Technology May Finally Change the World
+                </strong>
+              </h6>
+              <p>
+                Solid-state batteries are poised to emerge in the coming years
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/id/13/250/150" alt="">
+            </div>
+          </article>
+          <article class="row mb-4">
+            <div class="col-8">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2">
+                <strong>
+                  This Long-Awaited Technology May Finally Change the World
+                </strong>
+              </h6>
+              <p>
+                Solid-state batteries are poised to emerge in the coming years
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/id/13/250/150" alt="">
+            </div>
+          </article>
+          <article class="row mb-4">
+            <div class="col-8">
+              <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+              <span class="small ms-1">Winston Marshall</span>
+              <h6 class="mt-2">
+                <strong>
+                  This Long-Awaited Technology May Finally Change the World
+                </strong>
+              </h6>
+              <p>
+                Solid-state batteries are poised to emerge in the coming years
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jun 24</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="far fa-star"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/id/13/250/150" alt="">
+            </div>
+          </article>
+          
+        </section>
+        <aside class="col-sm-4">
+          <h6>
+            <small>
               <strong>
-                This Long-Awaited Technology May Finally Change the World
+                DISCOVER MORE OF WHAT MATTERS TO YOU
               </strong>
-            </h6>
-            <p>
-              Solid-state batteries are poised to emerge in the coming years
-            </p>
-            <ul class="list-inline small">
-              <li class="list-inline-item">Jun 24</li>
-              <li class="list-inline-item">6 min read</li>
-              <li class="list-inline-item">
-                <i class="far fa-star"></i>
-              </li>
-            </ul>
-          </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/13/250/150" alt="">
-          </div>
-        </article>
-        <article class="row mb-4">
-          <div class="col-8">
-            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
-            <span class="small ms-1">Winston Marshall</span>
-            <h6 class="mt-2">
-              <strong>
-                This Long-Awaited Technology May Finally Change the World
-              </strong>
-            </h6>
-            <p>
-              Solid-state batteries are poised to emerge in the coming years
-            </p>
-            <ul class="list-inline small">
-              <li class="list-inline-item">Jun 24</li>
-              <li class="list-inline-item">6 min read</li>
-              <li class="list-inline-item">
-                <i class="far fa-star"></i>
-              </li>
-            </ul>
-          </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/13/250/150" alt="">
-          </div>
-        </article>
-        <article class="row mb-4">
-          <div class="col-8">
-            <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
-            <span class="small ms-1">Winston Marshall</span>
-            <h6 class="mt-2">
-              <strong>
-                This Long-Awaited Technology May Finally Change the World
-              </strong>
-            </h6>
-            <p>
-              Solid-state batteries are poised to emerge in the coming years
-            </p>
-            <ul class="list-inline small">
-              <li class="list-inline-item">Jun 24</li>
-              <li class="list-inline-item">6 min read</li>
-              <li class="list-inline-item">
-                <i class="far fa-star"></i>
-              </li>
-            </ul>
-          </div>
-          <div class="col-4">
-            <img src="https://picsum.photos/id/13/250/150" alt="">
-          </div>
-        </article>
-        
-      </section>
-      <aside class="col-sm-4">
-        <h6>
-          <small>
-            <strong>
-              DISCOVER MORE OF WHAT MATTERS TO YOU
-            </strong>
-          </small>
-        </h6>
-        <ul class="list-inline aside-buttons">
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
-          </li>
-        </ul>
-      </aside>
+            </small>
+          </h6>
+          <ul class="list-inline aside-buttons">
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="" class="btn btn-sm btn-outline-secondary">Lorem.</a>
+            </li>
+          </ul>
+        </aside>
+      </div>
     </div>
   </div>
 
